# pycharm-sonar-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.zcode/plans/: plan-sess_3181c989-acc0-44cc-bffe-42c45de07b74.md
pyinstaller/: pycharm-code-quality-mcp.spec  pycharm-sonar-mcp.spec
scripts/: configure-claude.ps1  configure-claude.sh  configure-codex.ps1  configure-codex.sh  install-macos.sh  install-windows.ps1  uninstall-macos.sh  uninstall-windows.ps1  upload-macos-x64.sh
src/pycharm_code_quality_mcp/: __init__.py  __main__.py  _pyi_entry.py  cli.py  doctor.py  errors.py  logging_config.py  server.py
src/pycharm_code_quality_mcp/backends/: base.py
src/pycharm_code_quality_mcp/backends/jetbrains/: analyzer.py  client.py  config.py  models.py  parser.py
src/pycharm_code_quality_mcp/backends/sonar/: analyzer.py  client.py  discovery.py  models.py  result_summary.py  transport.py
src/pycharm_code_quality_mcp/core/: file_context.py  git_changes.py  path_utils.py  workspace.py
src/pycharm_code_quality_mcp/quality/: categorization.py  deduplication.py  fingerprints.py  models.py  normalization.py  orchestrator.py  severity.py
src/pycharm_code_quality_mcp/tools/: _shared.py  _sonar_instances.py  jetbrains_tools.py  quality_tools.py  sonar_tools.py
src/pycharm_sonar_mcp/: __init__.py  __main__.py  _pyi_entry.py  cli.py  doctor.py  errors.py  git_changes.py  ide_discovery.py  local_transport.py  logging_config.py  models.py  path_utils.py  result_summary.py  server.py  sonar_client.py  workspace.py
tests/: conftest.py  test_batch_analysis.py  test_cli.py  test_cli_new_commands.py  test_deduplication.py  test_git_changes.py  test_ide_discovery.py  test_jetbrains_client.py  test_jetbrains_parser.py  test_local_transport.py  test_orchestrator.py  test_quality_models.py  test_quality_tools.py  test_server.py  test_sonar_client.py  test_stdio_protocol.py  test_windows_paths.py  test_workspace.py
